# ChangeLog for mail-filter/amavisd-new
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/amavisd-new/ChangeLog,v 1.80 2006/04/07 20:26:10 ticho Exp $

*amavisd-new-2.4.0 (07 Apr 2006)

  07 Apr 2006; Andrej Kacian <ticho@gentoo.org>
  +files/amavisd-new-2.4-amavisd.conf-gentoo.patch,
  +files/amavisd-new-2.4-qmail-lf-workaround.patch,
  +amavisd-new-2.4.0.ebuild:
  Version bump. Closes bug #128698, reported by Matthew Sutton <msutton at
  circletgsc.org>.

  07 Apr 2006; Andrej Kacian <ticho@gentoo.org> amavisd-new-2.3.3-r2.ebuild:
  Depend on <=net-server-0.90. Closes bug #129160, reported by Jeremy
  Huddleston <eradicator@gentoo.org>.

  28 Feb 2006; Andrej Kacian <ticho@gentoo.org>
  -files/amavisd-new-2.2.1-amavisd.conf-gentoo.patch,
  -amavisd-new-2.2.1-r2.ebuild, -amavisd-new-2.3.0.ebuild,
  -amavisd-new-2.3.1.ebuild, -amavisd-new-2.3.2.ebuild,
  -amavisd-new-2.3.3.ebuild, -amavisd-new-2.3.3-r1.ebuild,
  amavisd-new-2.3.3-r2.ebuild:
  Use epause instead of sleep. Bug #124323, by Ciaran McCreesh <ciaranm at
  gentoo.org>. Removed old ebuilds.

  20 Feb 2006; Michael Hanselmann <hansmi@gentoo.org>
  amavisd-new-2.2.1-r2.ebuild, amavisd-new-2.3.0.ebuild,
  amavisd-new-2.3.1.ebuild, amavisd-new-2.3.2.ebuild,
  amavisd-new-2.3.3.ebuild, amavisd-new-2.3.3-r1.ebuild,
  amavisd-new-2.3.3-r2.ebuild:
  Changed to virtual/qmail.

  13 Feb 2006; Michael Cummings <mcummings@gentoo.org>
  amavisd-new-2.2.1-r2.ebuild, amavisd-new-2.3.0.ebuild,
  amavisd-new-2.3.1.ebuild, amavisd-new-2.3.2.ebuild,
  amavisd-new-2.3.3.ebuild, amavisd-new-2.3.3-r1.ebuild,
  amavisd-new-2.3.3-r2.ebuild:
  Virtuals for perl-core

  21 Jan 2006; Joseph Jezak <josejx@gentoo.org> amavisd-new-2.3.3-r2.ebuild:
  Marked ppc stable for bug #119155.

  30 Dec 2005; <mcumming@gentoo.org> amavisd-new-2.2.1-r2.ebuild,
  amavisd-new-2.3.0.ebuild, amavisd-new-2.3.1.ebuild,
  amavisd-new-2.3.2.ebuild, amavisd-new-2.3.3-r1.ebuild,